--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,7 @@ body {
       rgb(47, 48, 58, 0.4),
       rgb(47, 48, 58, 0.4)
     ),
-    url("/images/hero-img.jpg");
+    url("../images/hero-img.jpg");
   background-position: center;
   background-repeat: no-repeat;
   padding-top: 200px;
